# Olympian

./: .gitignore  CMakeLists.txt  Documents - Shortcut.lnk  LICENSE  README.md  TODO.md  TechDebt.md
Tester/: .gitignore  CMakeLists.txt  OlympianTester.oly  Tester.oly
Tester/.editor/: LiveSettings.toml  preferences.toml
Tester/res/assets/: BKG.toml  RichParagraph.toml  flag instance.toml  grass tileset.oly  grass tileset.toml  particle system.toml  signals.toml
Tester/res/fonts/: Merriweather-Black.ttf.oly  Merriweather-Regular.ttf.oly  PixelAlphabet.png.oly  PixelFont.oly  PixelNumbers.png.oly  Roboto-BoldItalic.ttf.oly  Roboto-Regular.ttf.oly  RobotoFontFamily.oly
Tester/res/signals/: Camera.oly  Click.oly  Drag.oly  Jump.oly  Move.oly
Tester/res/textures/: einstein.png.oly  flag.png.oly  godot.svg.oly  knight.png.oly  panel.png.oly  serotonin.gif.oly  tux.png.oly
Tester/src/: CMakeLists.txt  Jumble.cpp  Jumble.h  PlayerController.cpp  PlayerController.h  ProjectContext.cpp  ProjectContext.h  SpriteMatch.cpp  SpriteMatch.h  Tester.cpp
Tester/tools/: PreBuild.py  ToolNode.py  ToolRegistry.py
Tester/tools/archetype/: Paragraph.py  SpriteNonant.py  Tool.py  cache.json  manifest.txt
definitions/: CMakeLists.txt  CodeGen.py  EnumCodeGen.py  KeysCodeGen.py  OlympianEngine.keys
definitions/enums/: CBorderPivot.enum  CBorderPivot.toml  PositioningMode.toml  StorageMode.enum  StorageMode.toml  TransformModifier.enum  TransformModifier.toml
definitions/enums/particles/: AttributeOperation.enum
definitions/enums/platform/: Axis0DConversion.enum  Axis0DConversion.toml  Axis1DConversion.enum  Axis1DConversion.toml  Axis2DConversion.enum  Axis2DConversion.toml  SignalBindingType.enum  SignalBindingType.toml  Swizzle.enum  Swizzle.toml
definitions/enums/rendering/: FrameFormat.enum  FrameFormat.toml
definitions/enums/text/: HorizontalAlignment.enum  VerticalAlignment.enum
definitions/enums/texture/: MagFilter.enum  MinFilter.enum  SVGMipmapGenerationMode.enum  Wrap.enum
definitions/keys/: Collision  Context  Context.toml  Ellipse  Ellipse.toml  Font  FrameRate  FrameRate.toml  General  General.toml  Logger  NineSlice  NineSlice.toml  Padding  Padding.toml  Paragraph  Paragraph.toml  ParagraphFormat  ParticleSystem  ParticleSystem.toml  Polygon  Rect2D  Rect2D.toml  Signal  Signal.toml  Sprite  SpriteAtlas  Texture  Texture.toml  TileMap  TileMap.toml  TileSet  TileSet.toml  Transform  Transform.toml  Window  WindowHint
detail/: CMakeLists.txt
detail/assets/: CMakeLists.txt  KeyDecl.h  MetaSplitter.cpp  MetaSplitter.h  ResourcePath.cpp  ResourcePath.h  TranslateKey.cpp  TranslateKey.h
detail/definitions/: CMakeLists.txt  CodeGen.py  Enums.h  Keys.enum  KeysCodeGen.py  __init__.py
detail/definitions/enums/: AxisConversions.cpp  AxisConversions.h  CMakeLists.txt  CommonBufferPreset.cpp  CommonBufferPreset.h  Filters.cpp  Filters.h  FontStyle.h  GamepadAxis2D.cpp  GamepadAxis2D.h  Include.h  InputMod.cpp  InputMod.h  KeyInput.cpp  KeyInput.h  MouseButton.cpp  MouseButton.h  PositioningMode.cpp  PositioningMode.h  SVGMipmapGenerationMode.cpp  SVGMipmapGenerationMode.h  SignalBindingType.cpp  SignalBindingType.h  SpritesheetParamType.cpp  SpritesheetParamType.h  StorageMode.cpp  StorageMode.h  TilesetConfiguration.cpp  TilesetConfiguration.h
detail/definitions/keys/: Collision.toml  Font.toml  General.toml  Logger.toml  ParagraphFormat.toml  Polygon.toml  Sprite.toml  SpriteAtlas.toml  TileSet.toml  Window.toml  WindowHint.toml
detail/util/: CMakeLists.txt  CommonOStream.h  Counter.h  DynamicArray.h  FixedArray.h  FunctionalEvent.h  Hash.cpp  Hash.h  Internship.h  Macros.h  Parser.cpp  Parser.h  TypeErasedBox.h
editor/gui/: CMakeLists.txt  CollapsingSection.h  Controls.cpp  Controls.h  DisabledSection.cpp  DisabledSection.h  DrawResult.cpp  DrawResult.h  DynamicList.cpp  DynamicList.h  EditSession.h  Form.cpp  Form.h  GUIState.cpp  GUIState.h  IDScope.cpp  IDScope.h  ImGuiWrapper.cpp  ImGuiWrapper.h  InlineWidget.cpp  InlineWidget.h  ListModel.cpp  ListModel.h  Outline.cpp  Outline.h  Overlays.cpp  Overlays.h  PropertyClipboard.cpp  PropertyClipboard.h  PropertyGrid.cpp  PropertyGrid.h  PropertyGroup.cpp  PropertyGroup.h  PropertyPayloads.cpp  PropertyPayloads.h  PropertyViews.cpp  PropertyViews.h  StyleStack.cpp  StyleStack.h  Subform.cpp  (+10 more)
editor/gui/graphics/: CMakeLists.txt  Texture.cpp  Toolbar.cpp  Toolbar.h
editor/gui/properties/: CMakeLists.txt  PropertyClipboard.cpp  PropertyClipboard.h  PropertyGrid.cpp  PropertyGrid.h  PropertyGroup.cpp  PropertyGroup.h  PropertyPayloads.cpp  PropertyPayloads.h  PropertyViews.cpp  PropertyViews.h
editor/gui/scopes/: CMakeLists.txt  CollapsingSection.cpp  CollapsingSection.h  Form.cpp  Form.h  Subform.cpp  Subform.h
engine/: CMakeLists.txt  Olympian.h
engine/assets/: EngineInitialization.cpp  EngineInitialization.h  Loader.cpp  Loader.h  MetaSplitter.cpp  MetaSplitter.h  OlyScriptReader.cpp  OlyScriptReader.h
engine/core/: CMakeLists.txt
engine/core/algorithms/: CMakeLists.txt  GoldenSearch.h  GoldenSectionSearch.cpp  GoldenSectionSearch.h  Regex.cpp  Regex.h  STLUtils.cpp  STLUtils.h  TaggedTextParser.cpp  TaggedTextParser.h
engine/core/base/: ActionDelegate.h  Assert.cpp  Assert.h  CMakeLists.txt  Color.h  Colors.h  Constants.h  Context.cpp  Context.h  Definitions.h  Errors.h  Parameters.h  Random.h  SimpleMath.h  TransformerExposure.h  Transforms.cpp  Transforms.h  UnitVector.cpp  UnitVector.h
engine/core/cmath/: CMakeLists.txt  ColoredGeometry.cpp  ColoredGeometry.h  Triangulation.cpp  Triangulation.h
engine/core/containers/: Bijection.h  BlackBox.h  ContiguousMap.h  ContiguousSet.h  CopyPtr.h  DoubleBuffer.h  FixedVector.h  FreeSpaceTracker.h  IDGenerator.h  Polymorphic.h  Ranges.h  SmartReferenceLookup.h  SymmetricRefMap.h  TreeNode.h
engine/graphics/: BatchBarrier.h  CMakeLists.txt  Camera.cpp  Camera.h  Drawable.cpp  Drawable.h  Stencil.cpp  Stencil.h  Tags.h
engine/physics/: CMakeLists.txt  Units.h
engine/registries/: Loader.cpp  Loader.h  MetaSplitter.cpp  MetaSplitter.h
(+1378 files in other folders)
